fixed socialmedia logos
the logos were still not showing so i had to trial and error the proccess.

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -156,6 +156,10 @@ a.promo-link {
   padding:0px;
 }
 
+.socialmedia-logo {
+  text-decoration: none;
+}
+
 
 /* CHEF IMAGE */
 .chef {
